--- a/microservice-cloud-01/pom.xml
+++ b/microservice-cloud-01/pom.xml
@@ -15,6 +15,7 @@
         <!--商品消费者 -->
         <module>../microservice-cloud-04-consumer-product-80</module>
         <module>../microservice-cloud-05-eureka-6001</module>
+        <module>../microservice-cloud-05-eureka-6002</module>
     </modules>
     <packaging>pom</packaging>
 
