--- a/microservice-cloud-03-provider-product-8001/src/main/resources/application.yml
+++ b/microservice-cloud-03-provider-product-8001/src/main/resources/application.yml
@@ -26,9 +26,11 @@ eureka:
   client:
     registerWithEureka: true # 服务注册开关（是否往注册中心注册）
     fetchRegistry: true # 服务发现开关（是否从注册中心获取其他服务的信息）
-    serviceUrl: # 注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
-      defaultZone: http://localhost:6001/eureka
-      #defaultZone: http://eureka6001.com:6001/eureka,http://eureka6002.com:6002/eureka
+    serviceUrl: # 客户端（服务提供者）注册到哪一个Eureka Server服务注册中心，多个中间用逗号分隔
+      #单机版 eureka 服务注册中心
+      #defaultZone: http://localhost:6001/eureka
+      # 集群版 eureka 服务注册中心
+      defaultZone: http://eureka6001.com:6001/eureka,http://eureka6002.com:6002/eureka
   instance:
     instanceId: ${spring.application.name}:${server.port} # 等价于microservice-product:8001
     prefer-ip-address: true #访问路径就会显示成IP地址
