--- a/microservice-cloud-01/pom.xml
+++ b/microservice-cloud-01/pom.xml
@@ -16,6 +16,7 @@
         <module>../microservice-cloud-04-consumer-product-80</module>
         <module>../microservice-cloud-05-eureka-6001</module>
         <module>../microservice-cloud-05-eureka-6002</module>
+        <module>../microservice-cloud-06-provider-product-8002</module>
     </modules>
     <packaging>pom</packaging>
 
