Feign：使用feign进行远程服务调用

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#####
+﻿#####
 ## node_modules 文件夹不提交git
 ######
 .git
@@ -15,6 +15,7 @@ netcoreapp2.1
 *.pubxml
 *.user
 *.suo
+/.idea/
 
 
 # Package Files #
