--- a/microservice-cloud-07-consumer-product-feign/src/main/resources/application.yml
+++ b/microservice-cloud-07-consumer-product-feign/src/main/resources/application.yml
@@ -8,5 +8,7 @@ eureka:
     serviceUrl:
       defaultZone: http://eureka6001.com:6001/eureka/,http://eureka6002.com:6002/eureka/
 
-
+feign:
+  hystrix:
+    enabled: true # 开启服务熔断器
 
