Hystrix Dashboard：给生产者添加hystrix 监控，并查看监控页面

--- a/microservice-cloud-08-provider-product-hystrix-8001/src/main/resources/application.yml
+++ b/microservice-cloud-08-provider-product-hystrix-8001/src/main/resources/application.yml
@@ -36,7 +36,12 @@ eureka:
     prefer-ip-address: true #访问路径就会显示成IP地址
 
 
-
+# 在被监控服务上添加暴露端点
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
 
 
 
